bk_ida/bzip2ida/c3/compressedStreamEOF
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/compressedStreamEOF/src/bzip2.c:1387:10: error: use of undeclared identifier 'unk_419AD7'
fwrite( &unk_419AD7, 0xF0uLL, 1uLL, stderr); 
         ^
1 error generated.
make: *** [/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/compressedStreamEOF/src/obj/bzip2.o] Error 1
